force-app/main/default/objects/Course_Master_Data_Set_up__mdt/Course_Master_Data_Set_up__mdt.object-meta.xml
<CustomObject>
    <label>Course Master Data Set up</label>
    <pluralLabel>Courses Master Data Set up</pluralLabel>
</CustomObject>