force-app/main/default/objects/Course_Master_Data_Set_up__mdt/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>