force-app/main/default/objects/Course_Master_Data_Set_up__mdt/fields/Duration_In_months__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_months__c</fullName>
    <label>Duration (In months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>